# boon

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  rust.yml
benches/: bench.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: boon.rs
lib/: Cargo.toml  README.md
lib/benches/: bench.rs
lib/src/: compiler.rs  draft.rs  ecma.rs  gen.rs  lib.rs  output.rs  root.rs  validator.rs
lib/tests/: debug.rs  examples.rs  invalid-schemas.rs  suite.rs
lib/tests/Extra-Test-Suite/tests/draft2020-12/: ref.json
lib/tests/examples/: dog.json  instance.yml  schema.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: compiler.rs  content.rs  draft.rs  ecma.rs  formats.rs  gen.rs  lib.rs  loader.rs  output.rs  resource.rs  resources.rs  root.rs  roots.rs  util.rs  validator.rs
tests/: compiler.rs  debug.rs  examples.rs  filepaths.rs  invalid-schemas.json  invalid-schemas.rs  output.rs  suite.rs
tests/Extra-Suite/tests/draft7/optional/format/: period.json
tests/Extra-Test-Suite/tests/draft2020-12/: unevaluatedProperties.json  uniqueItems.json
