[package]
name = "jsonschema"
version = "0.1.0"
edition = "2021"
description = "JSONSchema (draft 2020-12, draft 2019-09, draft-7, draft-6, draft-4) Validation"
readme = "README.md"
repository = "https://github.com/santhosh-tekuri/jsonschema-rs"
authors = ["santhosh kumar tekuri <santhosh.tekuri@gmail.com>"]
keywords = ["jsonschema", "validation"]
license = "MIT OR Apache-2.0"
categories = ["json", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
regex = "1"
url = "2"
url-escape = "0.1.1"
percent-encoding = "2"
once_cell = "1"
chrono = "0.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
