[package]
name = "boon"
version = "0.5.3"
edition = "2021"
description = "JSONSchema (draft 2020-12, draft 2019-09, draft-7, draft-6, draft-4) Validation"
readme = "README.md"
repository = "https://github.com/santhosh-tekuri/boon"
authors = ["santhosh kumar tekuri <santhosh.tekuri@gmail.com>"]
keywords = ["jsonschema", "validation"]
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
exclude = [ "tests", ".github", ".gitmodules" ]

[dependencies]
serde = "1"
serde_json = "1"
regex = "1.10.3"
regex-syntax = "0.8.2"
url = "2"
fluent-uri = "0.1.4"
idna = "0.5"
percent-encoding = "2"
once_cell = "1"
base64 = "0.21"
ahash = "0.8.3"

[dev-dependencies]
getopts = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ureq = "2"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
