[package]
name = "boon-cli"
version = "0.6.0"
edition = "2021"

[dependencies]
boon = { version = "0.6", path = ".."}
url = "2"
getopts = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = "2.9.6"
rustls = "0.22"
rustls-pemfile = "2.1"

[[bin]]
name = "boon"
path = "src/main.rs"
