[package]
name = "boon-cli"
version = "0.6.0"
edition = "2021"
description = "cli for JSONSchema (draft 2020-12, draft 2019-09, draft-7, draft-6, draft-4) Validation"
repository = "https://github.com/santhosh-tekuri/boon/cli"
authors = ["santhosh kumar tekuri <santhosh.tekuri@gmail.com>"]
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
boon = { version = "0.6.1", path = ".."}
url = "2"
getopts = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = "2.12"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"

[[bin]]
name = "boon"
path = "src/main.rs"
